--- a/css/style.css
+++ b/css/style.css
@@ -923,6 +923,8 @@ strong {
     opacity: 0;
     width: 0;
     height: 0;
+    position: absolute;
+    pointer-events: none;
 }
 
 .toggle-slider {
